Recent Post's', Closing modal on clicking the post author, Comment section visible on /post page mounting, Padding added in /post/:id for the comment box to be visible, Fixed page title and tagline orientation in pages, in mobile screen, Fixed spacing on about in /profile page, Fixed spacing on about in /[type] page

--- a/src/layouts/PageContentBox/PageContentBox.module.css
+++ b/src/layouts/PageContentBox/PageContentBox.module.css
@@ -1,7 +1,8 @@
 .wrapper {
   position: relative;
   background: #ffffff;
-  padding: var(--spacing-16);
+  /* padding: var(--spacing-16); */
+  padding: 16px;
   border: 1px solid #ebedf0;
   border-radius: 8px;
   margin-bottom: calc(var(--spacing-8) + var(--spacing-4));
